@@ -1,5 +1,10 @@
 2009-09-07  Alan Modra  <amodra@bigpond.net.au>
 
+	* z8kgen.c (func): Stabilize qsort of identically named entries.
+	* z8k-opc.h: Regenerate.
+
+2009-09-07  Alan Modra  <amodra@bigpond.net.au>
+
 	* configure.in (BUILD_LIBS, BUILD_LIB_DEPS): Define and subst.
 	* configure: Regenerate.
 	* Makefile.am (LIBIBERTY, BUILD_LIBIBERTY, BUILD_LIBINTL): Delete.
